--- a/force-app/main/default/classes/TestClass_EMS_TM_Lock_Previous_Week.cls
+++ b/force-app/main/default/classes/TestClass_EMS_TM_Lock_Previous_Week.cls
@@ -24,17 +24,22 @@ public class TestClass_EMS_TM_Lock_Previous_Week {
         emsts.EMS_TM_Thu__c=8;
         emsts.EMS_TM_Fri__c=8;
         emsts.EMS_TM_Sat__c=8;
-        emsts.EMS_TM_Week__c=date.newInstance(2023,02,27);
+        emsts.EMS_TM_Week__c=System.today()-5;
+         emsts.Week_End_Date__c = System.today()-5;
         insert emsts;
-        String sch = '0 0 23 * * ?';
-        EMS_TM_Lock_Previous_Week tsc = new EMS_TM_Lock_Previous_Week();
-        system.schedule('Test status', sch, tsc );
-		EMS_TM_Lock_Previous_Week testsche = new EMS_TM_Lock_Previous_Week();		
-		system.schedule('Test status Check', sch, testsche );
+          EMS_TM_Lock_Previous_Week batchExecute = new EMS_TM_Lock_Previous_Week(); 
+        Database.executeBatch(batchExecute);
 		Test.stopTest();
           EMS_Timesheet__c timesheetRec =[SELECT Id,EMS_TM_Status__c FROM EMS_Timesheet__c LIMIT 1];
           System.assertEquals('Locked', timesheetRec.EMS_TM_Status__c);
           
+	}
+    public static testMethod void testscheduleclass() {
+		Test.StartTest();
+		EMS_TM_Lock_Previous_Week_sch testsche = new EMS_TM_Lock_Previous_Week_sch();
+		String sch = '0 0 23 * * ?';
+		system.schedule('Test BatchToCalculateTheAvaiLeaves Check', sch, testsche );
+		Test.stopTest();
 	}
 
 }
